--- a/drafts/forms/product-form.html
+++ b/drafts/forms/product-form.html
@@ -1,62 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>croxo contact form</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-	<div id="croxoContactForm" class="croxo-contact-form__main-wrapper">
-		<div class="croxo-contact-form__form-wrapper p-4">
-			<div class="croxo-contact-form__close-btn d-flex justify-content-end">
-				<span class="material-symbols-outlined">close</span>
-			</div>
-			<div class="croxo-contact-form__form-item croxo-contact-form__form-item--contact">
-				<div class="croxo-contact-form__contact-types d-flex"> 
-					<button class="reset-button contact-types--mail"><span class="material-symbols-outlined">mail</span></button>
-					<button class="reset-button contact-types--phone"><span
-							class="material-symbols-outlined">phone_in_talk</span></button>
-				</div>
-				<div class="croxo-contact-form__contact-input-wrapper">
-					<!-- insert input -->
-				</div>
-			</div>
-			<div class="croxo-contact-form__form-item croxo-contact-form__form-item--name">
-				<!-- insert input -->
-			</div>
-			<div class="croxo-contact-form__form-item croxo-contact-form__form-item--textarea">
-				<!-- insert input -->
-			</div>
-			<div class="croxo-contact-form__form-item croxo-contact-form__form-item--invisible-input">
-				<!-- insert invisible input -->
-			</div>
-		</div>
+<div class="croxo-contact-form__form-wrapper p-4 croxo-font-text--deep">
+	<div class="croxo-contact-form__close-btn d-flex justify-content-end"><span
+			class="material-symbols-outlined c-pointer theme-color">close</span></div>
+	<div class="croxo-contact-form__form-item croxo-contact-form__form-item--contact">
+		<div class="croxo-contact-form__contact-types d-flex"><button class="reset-button contact-types--mail"><span
+					class="material-symbols-outlined c-pointer theme-color">mail</span></button><button
+				class="reset-button contact-types--phone contact-types--inactive"><span
+					class="material-symbols-outlined c-pointer theme-color">phone_in_talk</span></button></div>
+		<div class="croxo-contact-form__contact-input-wrapper email">[email croxo-email id:croxoEmailinput placeholder
+			"e-mail"]</div>
+		<div class="croxo-contact-form__contact-input-wrapper d-none phone">[tel croxo-phone id:croxoPhoneInput
+			placeholder "phone"]</div>
 	</div>
-	<script src="index.js"></script>
-</body>
-
-</html>
-
-<!-- 
-
-    <label> Your name
-    [text* your-name autocomplete:name] </label>
-
-<label> Your email
-    [email* your-email autocomplete:email] </label>
-
-<label> Subject
-    [text* your-subject] </label>
-
-<label> Your message (optional)
-    [textarea your-message] </label>
-
-[submit "Submit"]
-
-
-[email* croxo-mail placeholder "e-mail"]
- -->
+	<div class="croxo-contact-form__form-item croxo-contact-form__form-item--name">[text croxo-name placeholder "name"]
+	</div>
+	<div class="croxo-contact-form__form-item croxo-contact-form__form-item--textarea">[textarea croxo-textarea]</div>
+	[submit class:croxo-contact-form-submit-btn "Submit"]<div
+		class="croxo-contact-form__form-item croxo-contact-form__form-item--invisible-input invisible-input--page-title d-none">
+		[text croxo-page-title id:croxoPageTitleInput]</div>
+	<div
+		class="croxo-contact-form__form-item croxo-contact-form__form-item--invisible-input invisible-input--page-link d-none">
+		[text croxo-page-link id:croxoPageLinkInput]</div>
+</div>
